test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-unmanaged-from-oknil-nil.chpl
//  lhs: unmanaged?  rhs: nil?  ok

class MyClass {  var x: int;  }



record MyRecord {
  var lhs: unmanaged MyClass? = nil;
}

var myr = new MyRecord();


